--- a/index.html
+++ b/index.html
@@ -42,30 +42,9 @@
 							<div class="main-menu text-right">
 								<nav id="mobile-menu">
 									<ul>
-										<li class="active"><a href="index.html">home </a>
-											<ul class="sub-menu text-left">
-												<li><a href="index.html">home 1</a></li>
-												<li><a href="index-2.html">home 2</a></li>
-												<li><a href="index-3.html">home 3</a></li>
-											</ul>
-										</li>
+										<li><a href="index.html">home </a></li>
 										<li><a href="about.html">about</a></li>
-										<li><a href="portfolio-3-col.html">portfolio</a>
-											<ul class="sub-menu text-left">
-												<li><a href="portfolio-3-col.html">portfolio 3 col</a></li>
-												<li><a href="portfolio-3-col-masonry.html">portfolio 3 col masonry</a></li>
-												<li><a href="portfolio-4-col.html">portfolio 4 col</a></li>
-												<li><a href="portfolio-4-col-masonry.html">portfolio 4 col masonry</a></li>
-												<li><a href="portfolio-details.html">portfolio details</a></li>
-											</ul>
-										</li>
-										<li><a href="blog-default.html">blog </a>
-											<ul class="sub-menu text-left">
-												<li><a href="blog-default.html">blog default</a></li>
-												<li><a href="blog-details.html">blog details</a></li>
-											</ul>
-										</li>
-										<li><a href="contact.html">contact</a></li>
+										<li><a href="portfolio-3-col.html">portfolio</a></li>
 									</ul>
 								</nav>
 							</div>
@@ -82,15 +61,8 @@
 				<div class="container">
 					<div class="col-xl-8">
 						<div class="slider-content">
-							<h3>Hello, I am <span>Aymaan Zafir</span></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in volup- tate velit esse cillum dolore euopd.</p>	
-							<div class="slider-icon">
-								<span>Follow me :</span>
-								<a href="#"><span class="ti-twitter"></span></a>
-								<a href="#"><span class="ti-vimeo"></span></a>
-								<a href="#"><span class="ti-dribbble"></span></a>
-								<a href="#"><span class="ti-instagram"></span></a>
-							</div>					
+							<h3>Hello, I am <span>Zian Lu</span></h3>
+							<p>an illustrator, industrial designer, graduated from California College of the Arts in 2022.Thank you for visiting my personal portfolio website. Here are my works in school and projects while working in China. Hope you enjoy them.</p>	
 						</div>
 					</div>
 				</div>
