--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Befold - Minimal Portfolio Template</title>
+        <title>Zian's Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -62,7 +62,7 @@
 					<div class="col-xl-8">
 						<div class="slider-content">
 							<h3>Hello, I am <span>Zian Lu</span></h3>
-							<p>an illustrator, industrial designer, graduated from California College of the Arts in 2022.Thank you for visiting my personal portfolio website. Here are my works in school and projects while working in China. Hope you enjoy them.</p>	
+							<p>an illustrator, industrial designer graduated from California College of the Arts in 2022. Thank you for visiting my personal portfolio website. Here are my works in school and projects while working in China. They include illustration, graphic design, industrial design, and shop facade. Always being curious and exploring different design fields is my tennet. Hope you enjoy them.</p>	
 						</div>
 					</div>
 				</div>
