--- a/index.html
+++ b/index.html
@@ -227,17 +227,9 @@
 			<div class="footer-area gray-bg pt-60 pb-40">
 				<div class="container">
 					<div class="row">
-						<div class="col-xl-5 col-lg-5 col-md-5 mb-20">
-							<div class="footer-icon">
-								<a href="#"><span class="ti-twitter"></span></a>
-								<a href="#"><span class="ti-vimeo"></span></a>
-								<a href="#"><span class="ti-dribbble"></span></a>
-								<a href="#"><span class="ti-instagram"></span></a>
-							</div>
-						</div>
 						<div class="col-xl-7 col-lg-7 col-md-7 mb-20">
 							<div class="copyright text-md-right">
-								<p>Copyright <i class="fas fa-at"></i> 2018 befolds, All Right By <a href="http://www.bootstrapmb.com/">bootstrapmb</a>.</p>
+								<p>Copyright <i class="fas fa-at"></i> 2022 Zian's Portfolio. All rights reserved.</p>
 							</div>
 						</div>
 					</div>
