--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
 			<div class="footer-area gray-bg pt-60 pb-40">
 				<div class="container">
 					<div class="row">
+						<div class="col-xl-5 col-lg-5 col-md-5 mb-20">
+						</div>
 						<div class="col-xl-7 col-lg-7 col-md-7 mb-20">
 							<div class="copyright text-md-right">
 								<p>Copyright <i class="fas fa-at"></i> 2022 Zian's Portfolio. All rights reserved.</p>
