--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<div class="row">
 						<div class="col-xl-3 col-lg-3">
 							<div class="logo">
-								<a href="index.html"><img src="img/logo/logo.png" alt="" /></a>
+								<a href="index.html"><img src="img/portfolio/portfolio-details.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div class="col-xl-9 col-lg-9">
@@ -62,7 +62,7 @@
 					<div class="col-xl-8">
 						<div class="slider-content">
 							<h3>Hello, I am <span>Zian Lu</span></h3>
-							<p>an illustrator, industrial designer graduated from California College of the Arts in 2022. Thank you for visiting my personal portfolio website. Here are my works in school and projects while working in China. They include illustration, graphic design, industrial design, and shop facade. Always being curious and exploring different design fields is my tennet. Hope you enjoy them.</p>	
+							<p>an illustrator, industrial designer graduated from California College of the Arts in 2022. Thank you for visiting my personal portfolio website. Here are my works in school and projects while working in China. They include illustration, graphic design, industrial design, and branding. Always being curious and exploring different design fields is my tennet. Hope you enjoy them.</p>	
 						</div>
 					</div>
 				</div>
@@ -76,9 +76,9 @@
 					<div class="col-xl-12">
 						<div class="portfolio-menu mb-40">
 							<button class="active" data-filter="*">All</button>
-							<button data-filter=".cat1">photography</button>
-							<button data-filter=".cat2"> development</button>
-							<button data-filter=".cat3">animation</button>
+							<button data-filter=".cat1">illustration</button>
+							<button data-filter=".cat2"> industrial</button>
+							<button data-filter=".cat3">branding</button>
 						</div>
 					</div>
 				</div>
