--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<div class="row">
 						<div class="col-xl-3 col-lg-3">
 							<div class="logo">
-								<a href="index.html"><img src="img/portfolio/portfolio-details.jpg" alt="" /></a>
+								<a href="index.html"><img src="img/logo/logo.png" alt="" /></a>
 							</div>
 						</div>
 						<div class="col-xl-9 col-lg-9">
