--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 					</div>
 				</div>
 				<div class="portfolio-btn mt-20 text-center">
-					<a class="btn" href="#">load more</a>
+					<a class="btn" href="portfolio-3-col.html">view all</a>
 				</div>
 			</div>
 		</div>
